# torch-xpu-ops

./: .clang-tidy  .dmypy.json  CMakeLists.txt  registration_test.py  test.py  test_logcumsumexp_complex.py  todo.md
.github/scripts/: lintrunner.sh
.github/workflows/: pull.yml
cmake/: BuildFlags.cmake
src/: BuildOnLinux.cmake
src/ATen/: CMakeLists.txt
src/ATen/native/xpu/: BatchLinearAlgebra.cpp  Nonzero.cpp  XPUFallback.template
src/ATen/native/xpu/mkl/: BatchLinearAlgebra.cpp  BatchLinearAlgebra.h
src/ATen/native/xpu/sycl/: NonzeroKernel.cpp  NonzeroKernel.h
src/comm/: DeviceProperties.h
test/xpu/: test_segfault_repro.py
yaml/native/: native_functions.yaml
